@@ -5,6 +5,7 @@ Pending changes in the mainline
 * Improvements and documentation of the C++ client API
 * Fix of Debian bug #724947 (licensing issue with the SHA-1 library)
 * Switch to Boost 1.54.0 (cf. issue #9)
+* "make uninstall" is now possible
 
 
 Version 0.6.1 (2013/09/16)
